--- a/src/main/resources/i18n/login.properties
+++ b/src/main/resources/i18n/login.properties
@@ -1,7 +1,7 @@
-login.cantsee=看不清，刷新试试～
-login.captcha=验证码~
-login.login=登录～
-login.password=密码～
-login.register=注册～
-login.tip=影院放映质量信息服务系统~
-login.username=用户名～
+login.cantsee=\u770B\u4E0D\u6E05\uFF0C\u5237\u65B0\u8BD5\u8BD5
+login.captcha=\u9A8C\u8BC1\u7801
+login.login=\u767B\u5F55
+login.password=\u5BC6\u7801
+login.register=\u6CE8\u518C
+login.tip=\u5F71\u9662\u653E\u6620\u8D28\u91CF\u4FE1\u606F\u670D\u52A1\u7CFB\u7EDF
+login.username=\u7528\u6237\u540D
